<resources>
    <string name="app_name">ROAL</string>
    <string name="todo">TODO</string>
    <string name="ingresar">Ingresar</string>
    <string name="ingresa_al_app_de_gestion_de_trabajadores">Ingresa al app de Gestión de trabajadores</string>
    <string name="bienvenido_a">Bienvenido(a)</string>
    <string name="version_app">Versión 1.0</string>
    <string name="contrasena_olvidada">Olvidaste tu contraseña?</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="contrasena">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="texto_correo_contrasena">Ingresa con tu correo y \ncontraseña.</string>
    <string name="inicio_sesion">Inicio de Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cargando">Cargando</string>
    <string name="ingresar_correo">Ingresa tu correo</string>
    <string name="recuperar_contrasena">Recuperar contraseña</string>
    <string name="llamanos">Si no puedes recuperar tu contraseña, llámanos</string>
    <string name="number">1</string>
    <string name="siguiente">Siguiente</string>
    <string name="codigo_recibido">Escribe el código recibido, verifica tu correo</string>
    <string name="reenviar_nuevamente">Reintentar</string>
    <string name="confrimar_contrasena">Confirmar contraseña</string>
    <string name="llamada_percance">Recuerda llamarnos si ocurre algun percance</string>
    <string name="actualizar">Actualizar</string>
    <string name="estructuras_publicitarias">Estructuras\nPublicitarias</string>
    <string name="subtitulo_roal">Panel de controles de la app de gestión</string>
    <string name="mantenimiento_trabajdores">Mantenimiento\nTrabajdores</string>
    <string name="validacion_epp">Validación\nEPP</string>
    <string name="reportes_trabajadores">Reportes\nTrabajadores</string>
    <string name="perfil">Perfil</string>
    <string name="emergencias">Emergencias</string>
    <string name="ajustes">Ajustes</string>
    <string name="ROAL">Estructuras Publicitarias - ROAL</string>
    <string name="mant_trabajadores">Mantenimiento de trabajadores</string>
    <string name="gestiona_datos_trabajdores">Gestiona los datos de tus trabajdores</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="informacion_mensaje_busca">Ingrese un documento de identidad para poder visualizar información de su trabajdor</string>
    <string name="informacion_respuesta_no_encontrada">No se encontró información con el método consultado</string>
    <string name="DNI_empleado">Escribe el DNI de empleado...</string>
    <string name="Dni">DNI : </string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento : </string>
    <string name="fecha_de_ingreso">Fecha de Ingreso : </string>
    <string name="celular">Celular : </string>
    <string name="nombres">Nombres</string>
    <string name="dni">DNI</string>
    <string name="apellidos">Apellidos</string>
    <string name="mandatory">Campo obligatorio</string>
    <string name="datos_obligatorios">Datos obligatorios</string>
    <string name="celular_form">Celular</string>
    <string name="cel_emergencia_form">Cel. emergencia</string>
    <string name="fecha_de_nacimiento_form">Fecha de nacimiento</string>
    <string name="datos_opcionales_form">Datos opcionales</string>
    <string name="fecha_de_ingreso_form">Fecha de ingreso</string>
    <string name="alergias_form">Alergias</string>
    <string name="enfermedades_pre_existentes_form">Enfermedades</string>
    <string name="grupo_sangu_neo_form">Grupo sanguíneo</string>
    <string name="area_form">Área</string>
    <string name="title_200_register_worker">"Registro exitoso"</string>
    <string name="subtitle_200_register_worker">"Se registro la información de este trabajador"</string>
    <string name="title_404_image">Imagen faltante</string>
    <string name="subtitle_image_description">Inserte una imagen</string>
    <string name="title_missing_parameters">Campos faltantes</string>
    <string name="subtitle_missing_parameters">Revise los campos obligatorios</string>
    <string name="title_error_register">Datos no válidos</string>
    <string name="subtitle_error_register">Problema con el registro del trabajdor, comunicarse con soporte</string>
    <string name="registrar_trabajador">Registrar trabajador</string>
    <string name="dni_del_trabajador">DNI del trabajador</string>
    <string name="title_delete_data">Eliminar datos</string>
    <string name="subtitle_delete_data">Estas seguro de borrar esta información?</string>
    <string name="successful_delete_data">Información del trabajador borrado</string>
    <string name="fecha_de_creaci_n">Fecha de creación</string>
    <string name="password">*************</string>
    <string name="salir">Salir</string>
    <string name="texto_card_view">Seguirás escuchando sobre nosotros, somos un grupo pequeño de desarolladores,que aun sigue en progreso.</string>
    <string name="textAlerta">La aplicación aun sigue en mejores, si tienes problemas comunicate con nosotros.</string>
    <string name="textVerififacion">Se verifica que la aplicación cumple con los Terminos y Condiciones correspondientes.</string>
    <string name="textSegundaVerificacion">Desarollo por parte de Ingenieros de Siste,as.</string>
    <string name="buscar">Buscar</string>
    <string name="tipos_de_busquedad">Tipos de busquedad</string>
    <string name="foto">Foto</string>
    <string name="qr">QR</string>
    <string name="celular_principal">Principal</string>
    <string name="celular_secundario">Secundario</string>
    <string name="llamar">Llamar</string>
    <string name="datos_generales">Datos generales</string>
    <string name="celulares">Celulares</string>
    <string name="fechas">Fechas</string>
    <string name="nacimiento">Nacimiento</string>
    <string name="_12_10_1998">12-10-1998</string>
    <string name="ingreso">Ingreso</string>
    <string name="A">A+</string>
    <string name="posible_lista_de_enf">Posible lista</string>
    <string name="btnBorrar">Borrar</string>
    <string name="btnActualizar">Actualizar</string>
</resources>