<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewNomCompleto"
                android:layout_width="match_parent"
                android:fontFamily="@font/mulish_bold"
                android:textSize="16sp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_height="wrap_content"
                android:text="@string/nombre_completo"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mulish_bold"
                    android:text="@string/Dni"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/textViewDNI"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/mulish_bold"
                    android:paddingStart="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dni_del_trabajador"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageview_check"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_check"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/todo"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp" />

</LinearLayout>