<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".view.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintGeneral"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_baseline_arrow_circle_left_24"
            android:contentDescription="@string/todo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_principal"
            android:layout_width="320dp"
            android:layout_height="350dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/forgot_password_view"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_Top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/contrasena_olvidada"
            android:textAlignment="center"
            android:textAppearance="@style/titulosGeneral"
            app:layout_constraintEnd_toEndOf="@+id/image_principal"
            app:layout_constraintStart_toStartOf="@+id/image_principal"
            app:layout_constraintTop_toBottomOf="@+id/image_principal" />

        <TextView
            android:id="@+id/textIngresarCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ingresar_correo"
            android:textAlignment="center"
            android:textAppearance="@style/subtitulosGeneral"
            app:layout_constraintEnd_toEndOf="@+id/text_Top"
            app:layout_constraintStart_toStartOf="@+id/text_Top"
            app:layout_constraintTop_toBottomOf="@+id/text_Top" />

        <EditText
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:layout_marginTop="10dp"
            android:autofillHints="emailAddress"
            android:drawableEnd="@drawable/ic_email"
            android:fontFamily="@font/mulish_regular"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/btnRecuperarContrasena"
            app:layout_constraintEnd_toEndOf="@+id/textIngresarCorreo"
            app:layout_constraintStart_toStartOf="@+id/textIngresarCorreo"
            app:layout_constraintTop_toBottomOf="@+id/textIngresarCorreo"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnRecuperarContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="@drawable/rounded_button"
            android:text="@string/recuperar_contrasena"
            android:textAllCaps="false"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tvName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#424242"
            android:fontFamily="@font/mulish_regular"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/llamanos"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>